log
Tue 21 Mar 2023 12:54:52 AM UTC: 
 tests:  0|6
total_score: 0/70
9d136e1
Tue 21 Mar 2023 12:56:34 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3c2d62d
Tue 21 Mar 2023 12:58:39 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
19d871a
Tue 21 Mar 2023 12:59:59 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
79d2702
Tue 21 Mar 2023 01:01:44 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
47a2bc4
Tue 21 Mar 2023 01:08:06 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
c138645
Tue 21 Mar 2023 01:08:37 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
5d44828
Tue 21 Mar 2023 01:10:29 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
704f33c
Tue 21 Mar 2023 01:11:16 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
164d823
Tue 21 Mar 2023 01:11:48 AM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
a07735b
Tue 21 Mar 2023 01:12:05 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:11: error: unused variable ‘cabeza’ [-Werror=unused-variable]
   41 |     Node *cabeza = list->head;
      |           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
c9ad0c6
Tue 21 Mar 2023 01:12:24 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0061c13
Tue 21 Mar 2023 01:12:38 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:10: error: unused variable ‘dato’ [-Werror=unused-variable]
   45 |     void*dato = cabeza->data;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
5e56de1
Tue 21 Mar 2023 01:12:47 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
12a9f21
Tue 21 Mar 2023 01:18:47 AM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
cc70c57
Tue 21 Mar 2023 01:21:15 AM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
791f261
Tue 21 Mar 2023 01:23:55 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
0df7f4f
Tue 21 Mar 2023 01:24:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2b487f5
Tue 21 Mar 2023 01:26:31 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|4
total_score: 25/70
21d223e
Tue 21 Mar 2023 01:28:28 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
38425c1
Tue 21 Mar 2023 01:36:03 AM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
d98da76
Tue 21 Mar 2023 01:39:13 AM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  9|3
total_score: 35/70
6f68ac3
Tue 21 Mar 2023 01:40:01 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:84:16: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   84 |         return NULL;
      |                ^~~~
list.c:80:6: note: declared here
   80 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ff81c0f
Tue 21 Mar 2023 01:40:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
9407c15
Tue 21 Mar 2023 01:40:59 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
8e2fef5
Tue 21 Mar 2023 01:41:32 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:85:43: error: unknown type name ‘n’
   85 |   Node * nodoAInsertar = createNode(data);n
      |                                           ^
list.c:87:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   87 |   nodoAInsertar->next = list->head;
      |                ^~
list.c:85:10: error: variable ‘nodoAInsertar’ set but not used [-Werror=unused-but-set-variable]
   85 |   Node * nodoAInsertar = createNode(data);n
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d14ed0e
Tue 21 Mar 2023 01:41:38 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
69a974a
Tue 21 Mar 2023 01:42:42 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7667362
Tue 21 Mar 2023 01:43:36 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
604c317
Tue 21 Mar 2023 01:45:52 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:91:28: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
   91 |         list->head->prev = newNode;
      |                            ^~~~~~~
      |                            Node
list.c:91:28: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6bc0067
Tue 21 Mar 2023 01:46:03 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
dade411
Tue 21 Mar 2023 01:46:29 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
8c28d53
Tue 21 Mar 2023 01:49:05 AM UTC: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  9|3
total_score: 35/70
19dd2c2
Tue 21 Mar 2023 02:01:29 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
2e8ccae
Tue 21 Mar 2023 02:06:58 AM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
3ac8650
Tue 21 Mar 2023 02:16:40 AM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
329dfaa
Tue 21 Mar 2023 02:35:51 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
279ba82
Tue 21 Mar 2023 02:39:17 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
29ab5ce
Tue 21 Mar 2023 02:46:10 AM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
bc88c12
Tue 21 Mar 2023 02:50:03 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
a86265c
